--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "superdeli",
+  "name": "dizasStore",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "axios": "^1.7.8",
+    "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "next": "15.0.3",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
