--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@vercel/node": "^3.2.28",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "next": "15.0.3",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
