--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/node": "^3.2.28",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "next": "15.0.3",
     "node-fetch": "^3.3.2",
@@ -23,6 +24,7 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
